@startuml

title __COST's Class Diagram__\n

  package sase.evaluation {
    package sase.evaluation.tree {
      package sase.evaluation.tree.cost {
        class SharingDegreeTreeCostModel {
            + getCost()
            + getMPMTCost()
            - countMPMTNodes()
            - collectNodes()
        }
      }
    }
  }
  

  package sase.evaluation {
    package sase.evaluation.tree {
      package sase.evaluation.tree.cost {
        class ThroughputLatencyTreeCostModel {
            - throughputToLatencyRatio : Double
            - totalOrderOfEventTypes : List<EventType>
            - lastEventType : EventType
            + ThroughputLatencyTreeCostModel()
            + getCost()
            - getLatencyCost()
            - getLeafByEventType()
            + getRatio()
        }
      }
    }
  }
  

  package sase.evaluation {
    package sase.evaluation.tree {
      package sase.evaluation.tree.cost {
        class ThroughputTreeCostModel {
            - cache : HashMap<Node, Double>
            - enableCache : boolean
            + getCost()
            - internalGetCost()
            # getCardinality()
            - getInternalNodeCost()
            - getLeafNodeCost()
            - getInternalNodeCardinality()
            - getLeafNodeCardinality()
            + getMPMTCost()
            - getSharedMPMTCost()
        }
      }
    }
  }
  

  SharingDegreeTreeCostModel -up-|> ITreeCostModel
  ThroughputLatencyTreeCostModel -up-|> ITreeCostModel
  ThroughputTreeCostModel -up-|> ITreeCostModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
